(library
 (name protocol_test_lib)
 (modules
  (:standard \ Test_runner))
 (library_flags
  (-linkall -g))
 (libraries rely.lib tezos_interop tezos protocol node)
 (preprocess
  (pps ppx_deriving_yojson)))

(executable
 (name Test_runner)
 (modules Test_runner)
 (libraries protocol_test_lib))

(rule
 (alias runtest)
 (deps Test_runner.exe)
 (action
  (run %{deps})))
