(library
 (name protocol_test_lib)
 (modules
  (:standard \ Test_runner))
 (library_flags
  (-linkall -g))
 (libraries
  rely.lib
  tezos_interop
  protocol
  node
  tezos_rpc
  deku_data
  deku_core)
 (preprocess
  (pps ppx_deriving_yojson ppx_let_binding)))

(executable
 (name Test_runner)
 (modules Test_runner)
 (libraries protocol_test_lib))

(rule
 (alias runtest)
 (deps Test_runner.exe)
 (action
  (run %{deps})))
