; declare the asserter test 

(executable
 (name asserter)
 (public_name asserter)
 (modules asserter)
 (libraries bin_common lwt cmdliner))

; declare the transactions tests using the asserter functions

(executable
 (name transactions_tests)
 (public_name transactions-tests)
 (modules transactions_tests)
 (preprocess
  (pps ppx_deriving.show ppx_deriving_yojson ppx_let_binding))
 (libraries bin_common lwt cmdliner))
