(executables
 (names state_hash test_main)
 (libraries
  core
  core_bench
  core_unix.command_unix
  lambda_vm
  core_deku
  tezos
  alcotest)
 (preprocess
  (pps ppx_deriving_yojson ppx_let_binding ppx_lambda_vm)))

(rule
 (alias bench_state_hash)
 (action
  (run %{exe:state_hash.exe})))

(rule
 (alias test_state_hash)
 (action
  (run %{exe:test_main.exe})))