(executable
 (name ligo_deku_rpc)
 (public_name ligo-deku-rpc)
 (modules ligo_deku_rpc server)
 (libraries
  handlers
  ocaml_wasm_vm
  tunac
  eio
  piaf
  logs
  logs.fmt
  fmt.tty
  routes
  cmdliner
  mirage-crypto
  data-encoding)
 (preprocess
  (pps ppx_deriving_cmdliner ppx_deriving.show)))

(library
 (name handlers)
 (modules :standard \ ligo_deku_rpc server)
 (wrapped false)
 (inline_tests)
 (libraries
  ocaml_wasm_vm
  tunac
  eio
  piaf
  logs
  logs.fmt
  fmt.tty
  routes
  cmdliner
  mirage-crypto
  data-encoding)
 (preprocess
  (pps
   ppx_deriving_cmdliner
   ppx_deriving.show
   ppx_deriving_encoding
   ppx_expect)))
