(library
 (name tezos_interop)
 (libraries helpers lwt.unix tezos-micheline crypto tezos)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.eq ppx_blob ppx_let_binding))
 (preprocessor_deps
  (file ./tezos_js_bridge.bundle.js)))

(rule
 (deps ./tezos_js_bridge.js)
 (target ./tezos_js_bridge.bundle.js)
 (mode fallback)
 (action
  (run esbuild %{deps} --bundle --minify --platform=node --outfile=%{target})))

(rule
 (deps ./webpack.config.js ./tezos_js_bridge.js)
 (alias fmt)
 (mode fallback)
 (action
  (run prettier -c %{deps})))
