(library
 (name tezos_interop)
 (libraries helpers lwt.unix tezos-micheline crypto tezos)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.eq ppx_blob ppx_let_binding))
 (preprocessor_deps
  (file ./tezos_js_bridge.bundle.js)))

(rule
 (deps ./esbuild.js ./esbuild-plugin-esy.js ./tezos_js_bridge.js)
 (target ./tezos_js_bridge.bundle.js)
 (mode fallback)
 (action
  (run node ./esbuild.js ./tezos_js_bridge.js %{target})))

(rule
 (deps ./tezos_js_bridge.js)
 (alias fmt)
 (mode fallback)
 (action
  (run prettier -c %{deps})))
