(library
 (name deku_tezos_interop)
 (public_name deku-tezos-interop)
 (libraries deku-stdlib lwt.unix tezos-micheline deku-crypto deku-tezos)
 (preprocess
  (pps ppx_yojson_conv ppx_deriving.eq ppx_blob ppx_let_binding))
 (preprocessor_deps
  (file ./tezos_js_bridge.bundle.js)))

(rule
 (deps ./webpack.config.js ./tezos_js_bridge.js)
 (targets ./tezos_js_bridge.bundle.js)
 (mode fallback)
 (action
  (run webpack --env=%{profile})))

(rule
 (deps ./webpack.config.js ./tezos_js_bridge.js)
 (alias fmt)
 (mode fallback)
 (action
  (run prettier -c %{deps})))
