(executable
 (name check_liveness)
 (public_name check-liveness)
 (modules check_liveness)
 (libraries lwt cmdliner feather))

(executable
 (name asserter_contract)
 (public_name asserter_contract)
 (modules asserter_contract)
 (libraries files lwt cmdliner))

(executable
 (name asserter_balance)
 (public_name asserter_balance)
 (modules asserter_balance)
 (libraries files lwt cmdliner))

(executable
 (name ticket_handle)
 (public_name ticket_handle)
 (modules ticket_handle)
 (libraries files lwt cmdliner yojson)
 (preprocess
  (pps ppx_deriving_yojson)))

(executable
 (name ticket_transfer)
 (public_name ticket_transfer)
 (modules ticket_transfer)
 (libraries files lwt cmdliner yojson)
 (preprocess
  (pps ppx_deriving_yojson)))
