(executable
 (name check_liveness)
 (public_name check-liveness)
 (modules check_liveness)
 (libraries bin_common lwt cmdliner feather))

(executable
 (name asserter_contract)
 (public_name asserter_contract)
 (modules asserter_contract)
 (libraries bin_common lwt cmdliner))

(executable
 (name asserter_balance)
 (public_name asserter_balance)
 (modules asserter_balance)
 (libraries bin_common lwt cmdliner))

(executable
 (name asserter_uri_update)
 (public_name asserter_uri_update)
 (modules asserter_uri_update)
 (libraries cmdliner))
 
(executable
 (name ticket_handle)
 (public_name ticket_handle)
 (modules ticket_handle)
 (libraries bin_common lwt cmdliner yojson)
 (preprocess
  (pps ppx_deriving_yojson)))

(executable
 (name ticket_transfer)
 (public_name ticket_transfer)
 (modules ticket_transfer)
 (libraries bin_common lwt cmdliner yojson)
 (preprocess
  (pps ppx_deriving_yojson)))

(executable
 (name load_test)
 (public_name deku-load-test)
 (modules load_test)
 (preprocess
  (pps ppx_deriving.show ppx_deriving_yojson ppx_let_binding))
 (libraries bin_common lwt cmdliner))
