(library
 (name zinc_utils)
 (public_name zinc.utils)
 (modules Zinc_utils)
 (libraries zarith digestif base)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.ord
   ppx_deriving.eq
   ppx_deriving.map
   ppx_deriving_yojson))
 (ppx_runtime_libraries ppx_deriving_yojson.runtime))

(library
 (name zinc_types)
 (public_name zinc.types)
 (modules Zinc_types)
 (libraries zinc_utils zarith digestif base)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.ord
   ppx_deriving.eq
   ppx_deriving.map
   ppx_deriving_yojson))
 (ppx_runtime_libraries ppx_deriving_yojson.runtime))

(library
 (name zinc_interpreter)
 (public_name zinc.interpreter)
 (modules Zinc_interpreter)
 (libraries zinc_utils zinc_types zarith digestif base)
 (ppx_runtime_libraries ppx_deriving_yojson.runtime))
