(executable
 (name runner)
 (libraries
  zinc.utils
  zinc.interpreter
  zinc.types
  zinc_instructions
  core_bench
  bigstringaf)
 (ocamlopt_flags
  (:standard -O3 -unboxed-types -g))
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.ord
   ppx_deriving.eq
   ppx_deriving.map
   ppx_deriving_yojson)))
