(library
  (name ligo_main)
  (public_name ligo.main)
  (instrumentation (backend bisect_ppx))
  (libraries
    ligo_run
    ligo_compile
    decompile
    main_errors
    scopes
    compiler_options
    fuzz
  )
  (flags (:standard -w +1..62-4-9-44-40-42-48-30@39@33 -open Simple_utils -open Tezos_utils ))
)
