# NOTE: dependencies added here are ignored in the LIGO build. Add
# dependencies in /ligo.opam and run [opam lock].
opam-version : "2.0"
name         : "LexerLib"
version      : "1.1"
synopsis     : "A library for UTF-8 aware lexers"
description  : "Provides lexing of comments and strings and a rich state for use by other tools"
maintainer   : "rinderknecht@free.fr"
authors      : "Christian Rinderknecht"
license      : "MIT"
homepage     : "https://gitlab.com/ligolang/LexerLib"
bug-reports  : "https://gitlab.com/ligolang/LexerLib/issues"
# If you change the dependencies, run `opam lock` in the root
depends      : ["dune" "base" "ocaml" "simple-utils" "getopt" "uutf"]
build        : [
                [ "dune" "build" "-p" name "-j" jobs ]
               ]
