# NOTE: dependencies added here are ignored in the LIGO build. Add
# dependencies in /ligo.opam and run [opam lock].
opam-version : "1.0"
name         : "Michelson"
version      : "1.0"
synopsis     : "A lexer and a parser for Michelson"
description  : "A lexer and a parser for Michelson"
maintainer   : "rinderknecht@free.fr"
authors      : "Christian Rinderknecht"
license      : "MIT"
homepage     : "https://gitlab.com/ligolang/Michelson"
bug-reports  : "https://gitlab.com/ligolang/Michelson/issues"
# If you change the dependencies, run `opam lock` in the root
depends      : ["dune" "base" "ocaml" "simple-utils"
                "getopt" "LexerLib" "Preprocessor" "ParserLib"]
build        : [
                [ "sh" "-c" "printf 'let version = \"%s\"' \"$(git describe --always --dirty)\" > version.ml" ]
                [ "dune" "build" "-p" name "-j" jobs ]
               ]
